# cognitive-layer

./: README.en.md  README.md  config.yaml  pyproject.toml
cognitive_core/: bias_engine_client.py  cognitive_integration.py  config_loader.py  models.py  neurostate_client.py  policy_mapper.py
cognitive_layer/: __init__.py  bias_engine_client.py  cognitive_integration.py  neurostate_client.py  policy_mapper.py
docs/: blog_article_draft.md
examples/basic/: demo.py
integrations/claude/: __init__.py
integrations/langchain/: __init__.py
integrations/openai/: __init__.py
