[project]
name = "cognitive-layer"
version = "0.1.0"
description = "Cognitive Layer Integration - NeuroState × Bias Engine orchestration layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cognitive_core", "integrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
